src/test/java/QuickTest.java
import java.util.Arrays;
import java.util.*;

public class QuickTest {

    public static void main(String[] args) {
        /*System.out.println(unit1.FirstTask.factorial(0)); //1
        System.out.println(unit1.FirstTask.factorialRecursion(-3)); //error
        System.out.println(unit1.FirstTask.factorialRecursion(5)); //125
        System.out.println(unit1.FirstTask.binaryToDecimal("1011011")); //91
        System.out.println(unit1.FirstTask.binaryToDecimal("11001")); //25
        System.out.println(unit1.FirstTask.binaryToDecimal("0111")); //7
        System.out.println(unit1.FirstTask.decimalToBinary("156")); // 10011100
        System.out.println(unit1.FirstTask.decimalToBinary("57")); // 111001
        System.out.println(unit1.FirstTask.decimalToBinary("567")); // 1000110111
        System.out.println(unit1.FirstTask.decimalToBinary("75")); // 1001011
        int[] arr = {-3,7,-1,2,0,-4};
        System.out.println(Arrays.toString(unit1.FirstTask.sortArray(arr, true)));
        System.out.println(Arrays.toString(unit1.FirstTask.sortArray(arr, false)));
        unit1.FirstTask.getMonthName(1, "en");
        unit1.FirstTask.getMonthName(10, "ru");
        unit1.FirstTask.getMonthName(31, "en");
        unit1.FirstTask.getMonthName(3, "usd");
        String[] arr = {"6", "9", "3", "5", "7"};
        System.out.println(Arrays.toString(unit2.SecondTask.sortArray(arr, false)));
        System.out.println(Arrays.toString(unit2.SecondTask.getCharEntries("I like it, move it, move it.")));
        List<unit2.model.Figure> list = new ArrayList<unit2.model.Figure>();
        unit2.model.Figure circle = new unit2.model.Circle(3);
        unit2.model.Figure square = new unit2.model.Square(3);
        unit2.model.Figure hexagon = new unit2.model.Hexagon(3);
        list.add(circle);
        list.add(square);
        list.add(hexagon);
        System.out.println(unit2.SecondTask.calculateOverallArea(list));*/
    }

}
